--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,11 @@
         {
             "label": "go build",
             "type": "shell",
-            "command": "go build"
+            "command": "go build",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
